# bert-russian-sentiment-emotion

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  folder_structure.txt  main.py  pyproject.toml  requirements.txt
bert_ru_sentiment_emotion/data/: cedr.py  ru_go_emotions.py  russian_sentiment.py
bert_ru_sentiment_emotion/model/: models.py
bert_ru_sentiment_emotion/trainer/: eval.py  metrics.py  old_metrics.py  predict.py  train.py
bert_ru_sentiment_emotion/utils/: utils.py
conf/: config.yaml  sweep.yaml
conf/dataset/: cedr.yaml  ru-go-emotions.yaml  russian-sentiment.yaml
conf/model/: rubert-base-cased.yaml  rubert-tiny2.yaml
conf/optimizer/: adam.yaml
conf/trainer/: rubert-base-cased-cedr.yaml  rubert-base-cased-ru-go-emotions.yaml  rubert-base-cased-russian-sentiment.yaml  (+3 more)
draft_test_notebooks/: diploma-AUC.ipynb  google-colab-training.ipynb  model_frameworks_conversion.ipynb  requirements.txt
notebooks/: diploma-AUC.ipynb  emotion_labeller.ipynb  google-colab-training.ipynb  ru-go-emotions-creation.ipynb
runs/: last_run.csv  rubert-base-cased-cedr-russian-emotion.csv  rubert-base-cased-ru-go-emotions.csv  rubert-base-cased-russian-sentiment.csv  rubert-tiny2-cedr-russian-emotion.csv  rubert-tiny2-ru-go-emotions.csv
strings/: cedr.yaml  ru-go-emotions.yaml  russian-sentiment.yaml
test_notebooks/: emotion_labeller.ipynb  google-colab-training.ipynb  ru-go-emotions-creation.ipynb
trash-notebooks/: main.ipynb  new_rubert-tiny2-ru-go-emotions.ipynb  rubert-tiny2-cedr.ipynb  rubert-tiny2-ru-go-emotions.ipynb  test.ipynb
(+59 files in other folders)
